--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,11 @@ media3Exoplayer = "1.6.1"
 retrofit = "2.11.0"
 uiTextAndroid = "1.8.2"
 
+core-ktx = "1.13.0"
+constraint-layout = "2.1.4"
+navigation = "2.7.7"
+lifecycle = "2.7.0"
+
 [libraries]
 android-gif-drawable = { module = "pl.droidsonroids.gif:android-gif-drawable", version.ref = "androidGifDrawable" }
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
