Joyline-1-Screen-Design

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
 
     <application
         android:name=".MyApplication"
@@ -16,9 +14,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Joyers"
+        android:theme="@style/Base.Theme.Joyers"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+<!--        <activity-->
+<!--            android:name=".ui.DashboardActivity"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".ui.auth.JoyersAuthActivity"
             android:exported="false" />
@@ -42,7 +43,7 @@
             android:name=".ui.loginforgot.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.auth.SplashActivity"
+            android:name=".ui.DashboardActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
