--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,11 +21,11 @@ constraintlayout = "2.2.1"
 media3Exoplayer = "1.6.1"
 retrofit = "2.11.0"
 uiTextAndroid = "1.8.2"
+fragmentKtx = "1.5.6"
+recyclerview = "1.3.0"
+circleimageview = "3.1.0"
 
-core-ktx = "1.13.0"
-constraint-layout = "2.1.4"
-navigation = "2.7.7"
-lifecycle = "2.7.0"
+
 
 [libraries]
 android-gif-drawable = { module = "pl.droidsonroids.gif:android-gif-drawable", version.ref = "androidGifDrawable" }
@@ -55,6 +55,13 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 androidx-ui-text-android = { group = "androidx.compose.ui", name = "ui-text-android", version.ref = "uiTextAndroid" }
+androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
+recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
+circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
+sdp = { group = "com.intuit.sdp", name = "sdp-android", version = "1.1.1" }
+ssp = { group = "com.intuit.ssp", name = "ssp-android", version = "1.1.1" }
+
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
