--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ uiTextAndroid = "1.8.2"
 fragmentKtx = "1.5.6"
 recyclerview = "1.3.0"
 circleimageview = "3.1.0"
+glide = "4.15.1"
 
 
 
@@ -60,7 +61,8 @@ recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "r
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
 sdp = { group = "com.intuit.sdp", name = "sdp-android", version = "1.1.1" }
 ssp = { group = "com.intuit.ssp", name = "ssp-android", version = "1.1.1" }
-
+glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+glide-compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 
 
 [plugins]
